--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.10",
     "morgan": "^1.10.0",
     "ts-node": "^10.9.2",
